force-app/main/default/objects/Release__c/Release__c.object-meta.xml
<CustomObject>
    <description>Tracks information, dates, responsible parties and Requests that are related to enhancements and new features being deployed into the Production environment for users.</description>
    <label>SFDC Release</label>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFDC Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>