force-app/main/default/objects/Release__c/fields/Release_Lead__c.field-meta.xml
<CustomField>
    <fullName>Release_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person responsible for coordinating the release elements including code deployment by developer and production testing</description>
    <label>Release Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>