force-app/main/default/objects/Release__c/fields/Scheduled_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Release_Date__c</fullName>
    <label>Scheduled Release Date</label>
    <type>Date</type>
</CustomField>