force-app/main/default/objects/Release__c/listViews/Completed_Releases.listView-meta.xml
<ListView>
    <fullName>Completed_Releases</fullName>
    <columns>NAME</columns>
    <columns>Release_Lead__c</columns>
    <columns>Scheduled_Release_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Release_Status__c</field>
        <operation>equals</operation>
        <value>Released</value>
    </filters>
    <label>9-Completed Releases</label>
    <language>en_US</language>
</ListView>