force-app/main/default/objects/Release__c/listViews/Upcoming_Releases.listView-meta.xml
<ListView>
    <fullName>Upcoming_Releases</fullName>
    <columns>NAME</columns>
    <columns>Release_Lead__c</columns>
    <columns>Release_Status__c</columns>
    <columns>Scheduled_Release_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Release_Status__c</field>
        <operation>equals</operation>
        <value>Planning,Scheduled</value>
    </filters>
    <label>1-Upcoming Releases</label>
    <language>en_US</language>
</ListView>